TSK-4439 -- attorney -> m4d и самые последние изменения API

--- a/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignature_CL.adoc
+++ b/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignature_CL.adoc
@@ -28,6 +28,7 @@ public class BaseCardSignature : BaseCardSectionRow
 |`Signer` |Задаёт или возвращает сотрудника непосредственно поставившего подпись.
 |`State` |Задаёт или возвращает подписываемый статус.
 |`TimeStamp` |Задаёт или возвращает время установки подписи.
+|`ExternalPowerOfAttorney` |Позволяет установить и прочитать стороннюю МЧД
 |===
 
 == Поля
