--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
@@ -19,15 +19,17 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |Имя |Описание
 
 |`Status` |Статус доверенности.
+|`UserCard` |Пользовательская карточка доверенности.
 |`Signer` |Подписант.
 |`PowerOfAttorneyStartDate` |Дата совершения доверенности.
 |`PowerOfAttorneyEndDate` |Срок действия доверенности.
 |`PowerOfAttorneyNumber` |Номер доверенности.
 |`SignatureFormat` |Формат подписи.
 |`MachineReadablePowerOfAttorney` |Машиночитаемая доверенность.
-|`MachineReadablePowerOfAttorneyTypeID` |Идентификатор типа МЧД.
+|`PowerOfAttorneyFormat` |Формат МЧД.
 |`Signature` |Подпись.
 |`Principal` |Доверитель.
+|`PrincipalINN` |ИНН доверителя.
 |`ParentalPowerOfAttorney` |Родительская доверенность.
 |`RevocationRequestDate` |Дата и время поступления заявления на отзыв.
 |`RevocationDate` |Дата отзыва.
@@ -42,15 +44,17 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |Имя |Описание
 
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[StatusProperty]` |Определяет свойство "Статус доверенности".
+|`UserCard` |Определяет свойство "Пользовательская карточка доверенности".
 |`SignerProperty` |Определяет свойство "Подписант".
 |`PowerOfAttorneyStartDateProperty` |Определяет свойство "Дата совершения доверенности".
 |`PowerOfAttorneyEndDateProperty` |Определяет свойство "Срок действия доверенности".
 |`PowerOfAttorneyNumberProperty` |Определяет свойство "Номер доверенности".
 |`SignatureFormatProperty` |Определяет свойство "Формат подписи".
 |`MachineReadablePowerOfAttorneyProperty` |Определяет свойство "Машиночитаемая доверенность".
-|`MachineReadablePowerOfAttorneyTypeIDProperty` |Определяет свойство "Идентификатор типа МЧД".
+|`PowerOfAttorneyFormat` |Определяет свойство "Формат МЧД".
 |`SignatureProperty` |Определяет свойство "Подпись".
 |`PrincipalProperty` |Определяет свойство "Доверитель".
+|`PrincipalINN` |Определяет свойство "ИНН доверителя".
 |`ParentalPowerOfAttorneyProperty` |Определяет свойство "Родительская доверенность".
 |`RevocationRequestDateProperty` |Определяет свойство "Дата и время поступления заявления на отзыв".
 |`RevocationDateProperty` |Определяет свойство "Дата отзыва".
