--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRegTransferStatuses_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyRegTransferStatuses_EN.adoc
@@ -22,4 +22,5 @@ public enum PowerOfAttorneyRegTransferStatuses
 |`Registered = 2` |Зарегистрирована.
 |`RequestForRevocationSubmitted = 3` |Отправлен запрос на отзыв.
 |`Revoked = 4` |Отозвана.
+|`OperationError = 5` |Операционная ошибка.
 |===
