--- a/modules/BackOffice-ObjectModel-Powers/pages/PowersGroup_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowersGroup_CL.adoc
@@ -21,8 +21,8 @@ public class PowersGroup : ObjectBase
 |`Name` |Имя кода полномочий.
 |`Code` |Код полномочий.
 |`Author` |Автор.
+|`NsiId` |Идентификатор составителя в ЕС НСИ
 |`Codes` |Коды.
-|`UpdateDate` |Дата обновления кода.
 |===
 
 == Поля
@@ -34,6 +34,6 @@ public class PowersGroup : ObjectBase
 |`NameProperty` |Определяет свойство "Имя кода полномочий".
 |`CodeProperty` |Определяет свойство "Код полномочий".
 |`AuthorProperty` |Определяет свойство "Автор".
+|`NsiIdDate` |Определяет свойство "Идентификатор составителя в ЕС НСИ".
 |`CodesProperty` |Определяет свойство "Коды".
-|`UpdateDate` |Определяет свойство "Дата обновления кода".
 |===
