--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -38,7 +38,42 @@
 |`PerformerFavoritesManager` |Создаёт и сохраняет в профиль пользователя список избранных исполнителей.
 |`PerformerSearchWord` |Представляет данные поискового слова.
 |`xref:Entities/PerformerSearchWordsManager_CL.adoc[PerformerSearchWordsManager]` |Представляет статические методы работы с поисковыми словами.
+|`xref:Entities/PowerOfAttorneyData_CL.adoc[PowerOfAttorneyData]` |Базовый класс сведений о доверенности.
+|`xref:Entities/PowerOfAttorneyDigest_CL.adoc[PowerOfAttorneyDigest]` |Представляет собой сведения о доверенности
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.AddressInfo_CL.adoc[AddressInfo]` |Сведения об адресе (АдрТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.BranchOfRussianEntityInfo_CL.adoc[BranchOfRussianEntityInfo]` |Сведения о филиале (обособленном подразделении) юридического лица (ФилПерПолн)
+|`xref:Entities/PowerOfAttorneyEMHCDData.ConfirmationOfAuthorityDocument_CL.adoc[ConfirmationOfAuthorityDocument]` |Документ, подтверждающий полномочия лица, действующего без доверенности (ДокПдтвТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.DelegatedPowerOfAttorneyPrincipal_CL.adoc[DelegatedPowerOfAttorneyPrincipal]` |Сведения о лице, передавшем полномочия (ПередПолн)
+|`xref:Entities/PowerOfAttorneyEMHCDData.FIO_CL.adoc[FIO]` |Фамилия, имя, отчество (при наличии) (ФИОТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.ForeignEntityInfo_CL.adoc[ForeignEntityInfo]` |Сведения об иностранном юридическом лице (СвИнОргТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.HandwrittenSignature_CL.adoc[HandwrittenSignature]` |Рукописная подпись (ПодпРукопис)
+|`xref:Entities/PowerOfAttorneyEMHCDData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице (СведФЛТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.IndividualPrincipalInfo1_CL.adoc[IndividualPrincipalInfo1]` |Сведения о физическом лице (ФЛПерПолн)
+|`xref:Entities/PowerOfAttorneyEMHCDData.IndividualPrincipalInfo_CL.adoc[IndividualPrincipalInfo]` |Сведения о физическом лице (доверителе) (ФЛДоверТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.IrrevocablePowerOfAttorneyInfo_CL.adoc[IrrevocablePowerOfAttorneyInfo]` |Сведения о безотзывной доверенности (Безотзыв)
+|`xref:Entities/PowerOfAttorneyEMHCDData.LegalEntityInfo_CL.adoc[LegalEntityInfo]` |Сведения о юридическом лице (или филиале (обособленном подразделении) юридического лица) (СвОргТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.MachineReadablePowerRestrictions_CL.adoc[MachineReadablePowerRestrictions]` |Сведения об ограничении (ограничениях) к полномочию (ОгрСвПолн)
+|`xref:Entities/PowerOfAttorneyEMHCDData.MachineReadablePowersInfo_CL.adoc[MachineReadablePowersInfo]` |Сведения о машиночитаемом полномочии (машиночитаемых полномочиях) (МашПолн)
+|`xref:Entities/PowerOfAttorneyEMHCDData.NotaryCertificateInfo_CL.adoc[NotaryCertificateInfo]` |Сведения о нотариальном удостоверении (СвНотУдТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.NotaryDeputyInfo_CL.adoc[NotaryDeputyInfo]` |ВРИО нотариуса (ВриоНотТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.NotaryInfo_CL.adoc[NotaryInfo]` |Сведения о нотариусе, совершившем нотариальное действие (СвНотДействТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyDocument_CL.adoc[PowerOfAttorneyDocument]` |Состав и структура документа (Документ)
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyDocumentData_CL.adoc[PowerOfAttorneyDocumentData]` |Доверенность (Довер)
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorneyInfo]` |Сведения о доверенности (СвДовТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.PrincipalInfo_CL.adoc[PrincipalInfo]` |Сведения о доверителе (Доверит)
+|`xref:Entities/PowerOfAttorneyEMHCDData.PrincipalsInfo_CL.adoc[PrincipalsInfo]` |Сведения о доверителе (доверителях) (СвДоверит)
+|`xref:Entities/PowerOfAttorneyEMHCDData.RepresentativesInfo_CL.adoc[RepresentativesInfo]` |Сведения о представителе (представителях) (СвУпПредТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.RepresentativePowersInfo_CL.adoc[RepresentativePowersInfo]` |Сведения о полномочиях представителя (представителей) (СвПолнТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData.RepresentativesInfo_CL.adoc[RepresentativesInfo]` |Сведения о представителе (представителях) (СвУпПредТип)
+|`xref:Entities/PowerOfAttorneyEMHCDData_CL.adoc[PowerOfAttorneyEMHCDData]` |Сведения о доверенности в формате единой формы доверенности
+
+|`xref:Entities/PowerOfAttorneyFNSData_CL.adoc[PowerOfAttorneyFNSData]` |
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc[PowerOfAttorneyFNSDOVBBData]` |
+|`xref:Entities/PowerOfAttorneyFNSDOVELData_CL.adoc[PowerOfAttorneyFNSDOVELDat]` |
+|`xref:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[PowerOfAttorneyMachineReadableInfo]` |Содержит информацию о МЧД.
 |`RoleModelAccessChecker` |Предоставляет методы проверки доступа в ролевой модели.
+|`xref:Entities/PowerOfAttorneyVerification_CL.adoc[PowerOfAttorneyVerification]` |Содержит результат проверки действительности доверенности
 |`ServerConnectionInfo` |Параметры соединения с сервером.
 |`xref:Entities/StartBusinessProcessErrorInfo_CL.adoc[StartBusinessProcessErrorInfo]` |Представляет содержимое ошибки запуска бизнес-процесса.
 |`xref:Entities/TaskStopExecutionInfo_CL.adoc[TaskStopExecutionInfo]` |Представляет содержимое ошибки остановки исполнения задания.
@@ -71,4 +106,30 @@
 |`xref:Entities/GridViewFieldCollectionType_EN.adoc[GridViewFieldCollectionType]` |Определяет тип отображаемого поля справочника сотрудников или контрагентов.
 |`xref:Entities/PerformerType_EN.adoc[PerformerType]` |Определяет тип исполнителя задания.
 |`xref:Entities/TaskTreeNodeType_EN.adoc[TaskTreeNodeType]` |Определяет тип узла в дереве заданий.
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.AuthorityType_EN.adoc[AuthorityType]` |Тип полномочия
+|`xref:Entities/PowerOfAttorneyEMHCDData.CitizenshipType_EN.adoc[CitizenshipType]` |Признак наличия гражданства
+|`xref:Entities/PowerOfAttorneyEMHCDData.EntityType_EN.adoc[EntityType]` |Тип лица, передавшего полномочия / тип представителя
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.Gender_EN.adoc[Gender]` |Пол
+|`xref:Entities/PowerOfAttorneyEMHCDData.JointRepresentationType_EN.adoc[JointRepresentationType]` |Признак совместных полномочий
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.NotarialActionParticipantStatus_EN.adoc[NotarialActionParticipantStatus]` |Статус участника нотариального действия
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyForm_EN.adoc[PowerOfAttorneyForm]` |Форма доверенности
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyKind_EN.adoc[PowerOfAttorneyKind]` |Вид доверенности
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyLossOfAuthorityType_EN.adoc[PowerOfAttorneyLossOfAuthorityType]` |Признак утраты полномочий при передоверии
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyOption_EN.adoc[PowerOfAttorneyOption]` |Признак доверенности
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.PrincipalType_EN.adoc[PrincipalType]` |Тип доверителя
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.RevocationCondition_EN.adoc[RevocationCondition]` |Условие отзыва доверенности
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.RevocationPossibleType_EN.adoc[RevocationPossibleType]` |Признак безотзывной доверенности
+
+|`xref:Entities/PowerOfAttorneyEMHCDData.SoleExecutiveAuthorityType_EN.adoc[SoleExecutiveAuthorityType]` |Вид полномочий единоличного исполнительного органа
+
 |===
