--- a/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService_IN.adoc
@@ -45,6 +45,8 @@ public interface IBaseCardService
 |`xref:IBaseCardService.StartBusinessProcess_MT.adoc[StartBusinessProcess(BaseCard, KindsCardProcess)]` |Запускает бизнес-процесс указанного вида
 |`xref:IBaseCardService.SendMailNotification_MT.adoc[SendMailNotification(IEnumerable<MailNotificationInfo>)]` |Отправляет оповещение по электронной почте.
 |`xref:IBaseCardService.GetPartSignatureInfo_MT.adoc[SignatureInfo GetPartSignatureInfo(BaseCardSignaturePart signaturePart, Stream contentStream, X509Certificate2 certificate)]` |Представляет информацию о части подписи.
+|`BaseCardExternalPowerOfAttorney(SignatureList, Guid, BaseCardExternalPowerOfAttorneyStatus);` |Добавляет стороннюю МЧД
+|`BaseCardExternalPowerOfAttorney(SignatureList, Guid, BaseCardExternalPowerOfAttorneyStatus, string);` |Добавляет стороннюю МЧД
 |`xref:IBaseCardService.StopBusinessProcess_MT.adoc[StopBusinessProcess(BaseCard, Process)]` |Останавливает выполнение бизнес-процесса.
 |`xref:IBaseCardService.UpdateBusinessProcessActiveInstancesProperties_MT.adoc[UpdateBusinessProcessActiveInstancesProperties(BaseCard)]` |Сохраняет в карточку значение переменных активных бизнес-процессов карточки.
 |`xref:IBaseCardService.UpdateBusinessProcessActiveInstancesVariables_MT.adoc[UpdateBusinessProcessActiveInstancesVariables(BaseCard)]` |Загружает из карточки значения переменных активных бизнес-процессов карточки.
