--- a/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
@@ -25,7 +25,7 @@ a|Создаёт новую СКД для представителя -- физи
 * `powerOfAttorneyData` -- Данные доверенности
 * `representative` -- Представитель
 * `signer` -- Подписант
-* `powerOfAttorneyType` -- Идентификатор типа доверенности
+* `powerOfAttorneyFormat` -- Формат доверенности
 
 Возвращаемое значение: карточка доверенности
 
@@ -36,7 +36,7 @@ a|Создаёт новую СКД для представителя -- юрид
 * `powerOfAttorneyData` -- Данные доверенности
 * `representative` -- Представитель
 * `signer` -- Подписант
-* `powerOfAttorneyType` -- Идентификатор типа доверенности
+* `powerOfAttorneyFormat` -- Формат доверенности
 
 Возвращаемое значение: карточка доверенности
 
@@ -229,7 +229,7 @@ a|Выполняет поиск доверенностей по условиям
 
 .Параметры:
 * `employee` -- Сотрудник, для которого ищутся доверенности
-* `powerOfAttorneyType` -- Идентификатор типа доверенности
+* `powerOfAttorneyFormat` -- Формат доверенности
 * `representativePowerCode` -- Код требуемого полномочия по доверенности
 * `filter` -- Дополнительные условия фильтрации найденных доверенностей
 
