--- a/modules/ROOT/partials/bo-om-basecard.adoc
+++ b/modules/ROOT/partials/bo-om-basecard.adoc
@@ -11,6 +11,7 @@
 ****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.SystemInfo_PR.adoc[]
 ****** xref:BackOffice-ObjectModel-BaseCard:BaseCard.GetSection_MT.adoc[]
 ***** xref:BackOffice-ObjectModel-BaseCard:BaseCardNumber_CL.adoc[]
+***** xref:BackOffice-ObjectModel-BaseCard:BaseCardExternalPowerOfAttorney_CL.adoc[]
 ***** xref:BackOffice-ObjectModel-BaseCard:BaseCardProcess_CL.adoc[]
 ***** xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty_CL.adoc[]
 ****** xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty.Fields_PR.adoc[]
