--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -20,6 +20,53 @@
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/MailNotificationInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/MailNotificationInfo_CT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PerformerSearchWordsManager_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyData_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyDigest_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.AddressInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.BranchOfRussianEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.ConfirmationOfAuthorityDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.DelegatedPowerOfAttorneyPrincipal_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.FIO_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.ForeignEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.HandwrittenSignature_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IndividualInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IndividualPrincipalInfo1_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IndividualPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IrrevocablePowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.LegalEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.MachineReadablePowerRestrictions_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.MachineReadablePowersInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.NotaryCertificateInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.NotaryDeputyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.NotaryInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyDocumentData_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PrincipalsInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativesInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativePowersInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativesInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.AuthorityType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.CitizenshipType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.EntityType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.Gender_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.JointRepresentationType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.NotarialActionParticipantStatus_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyForm_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyKind_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyLossOfAuthorityType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyOption_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PrincipalType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RevocationCondition_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RevocationPossibleType_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.SoleExecutiveAuthorityType_EN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSData_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerification_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/StartBusinessProcessErrorInfo_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskCopyResultsOptions_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/TaskStopExecutionInfo_CL.adoc[]
