--- a/modules/BackOffice-ObjectModel-Mapping/pages/ObjectModel_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Mapping/pages/ObjectModel_NS.adoc
@@ -24,6 +24,7 @@
 |`xref:BackOffice-ObjectModel-BaseCard:BarcodePrintSettingsCollection_CL.adoc[BarcodePrintSettingsCollection]` |Коллекция объектов типа `BarcodePrintSettings`.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[BaseCard]` |Базовый класс для объектно-ориентированных карточек библиотеки _{bo}_.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardNumber_CL.adoc[BaseCardNumber]` |Объектная модель секции "Номера" базовой карточки.
+|`xref:BackOffice-ObjectModel-BaseCard:BaseCardExternalPowerOfAttorney_CL.adoc[BaseCardExternalPowerOfAttorney]` |Базовая карточка сторонней доверенности для хранения информации о машиночитаемых доверенностях контрагентов, поступающих от операторов ЭДО
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardProcess_CL.adoc[BaseCardProcess]` |Предоставляет ссылку и настройки бизнес-процесса.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardProperty_CL.adoc[BaseCardProperty]` |Предоставляет доступ к коллекции `BaseCardPropertyField`.
 |`xref:BackOffice-ObjectModel-BaseCard:BaseCardPropertyField_CL.adoc[BaseCardPropertyField]` |Представляет описание ссылочного поля.
