TSK-4439 -- поправил ещё несколько ошибок

--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -33,6 +33,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IndividualInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IndividualPrincipalInfo1_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IndividualPrincipalInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IdentityCardOfIndividual_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.IrrevocablePowerOfAttorneyInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.LegalEntityInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.MachineReadablePowerRestrictions_CL.adoc[]
@@ -45,6 +46,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PrincipalInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PrincipalsInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativeInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativesInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativePowersInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.RepresentativesInfo_CL.adoc[]
@@ -54,6 +56,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.Gender_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.JointRepresentationType_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.NotarialActionParticipantStatus_EN.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerificationResult_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyForm_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyKind_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData.PowerOfAttorneyLossOfAuthorityType_EN.adoc[]
