--- a/modules/cards/pages/attorney.adoc
+++ b/modules/cards/pages/attorney.adoc
@@ -1,6 +1,6 @@
 = Взаимодействие с системной карточкой доверенности
 
-Системная карточка для работы с машиночитаемой доверенностью (далее - МЧД или доверенность) -- это карточка без UI. Полное название карточки: _Системная карточка доверенности_. Сокращение: СКД.
+Системная карточка для работы с машиночитаемой доверенностью (далее -- МЧД или доверенность) -- это карточка без UI. Полное название карточки: _Системная карточка доверенности_. Сокращение: СКД.
 
 .Жизненный цикл машиночитаемой доверенности в {dv}
 image::ROOT:attorney.png[Жизненный цикл машиночитаемой доверенности в {dv}]
