GBL-2635 -- Srevicec вместо Service

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -23,7 +23,7 @@
 ** `xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]` -- представляет группы полномочий для справочника полномочий МЧД.
 ** `xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]` -- представляет типы доверенности карточки справочник полномочий МЧД.
 ** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyMachineReadableProvider_IN.adoc[IPowerOfAttorneyMachineReadableProvider]` -- определяет методы формирования и чтения машиночитаемой доверенности.
-** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyServicec]` -- предоставляет методы для работы с системной карточкой доверенности.
+** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyService]` -- предоставляет методы для работы с системной карточкой доверенности.
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyData_CL.adoc[PowerOfAttorneyData]` -- Базовый класс сведений о доверенности.
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyDigest_CL.adoc[PowerOfAttorneyDigest]` -- Представляет собой сведения о доверенности
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMHCDData_CL.adoc[PowerOfAttorneyEMHCDData]` -- Сведения о доверенности в формате единой формы доверенности
