--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -22,7 +22,7 @@
 // ** `xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]` -- представляет группы полномочий для справочника полномочий МЧД.
 // ** `xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]` -- представляет типы доверенности карточки справочник полномочий МЧД.
 // ** `xref:BackOffice-ObjectModel-Services-IPartnersService:.IPowerOfAttorneyMachineReadableProvider_IN.adoc[IPowerOfAttorneyMachineReadableProvider]` -- определяет методы формирования и чтения машиночитаемой доверенности.
-// ** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyServicec]` -- предоставляет методы для работы с системной карточкой доверенности.
+// ** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyService]` -- предоставляет методы для работы с системной карточкой доверенности.
 // +
 // .. Перечисления::
 // +
