GBL-2791 / TSK-3922 -- не было упоминания про CompressFolder

--- a/modules/ROOT/partials/bo-om-services-I.adoc
+++ b/modules/ROOT/partials/bo-om-services-I.adoc
@@ -1,3 +1,5 @@
+****** xref:BackOffice-ObjectModel-Services-I:ICompressService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-I:CompressFolder_MT.adoc[]
 ****** xref:BackOffice-ObjectModel-Services-I:IRoleModelService_IN.adoc[]
 ****** xref:BackOffice-ObjectModel-Services-I:IScriptingService_IN.adoc[]
 ****** xref:BackOffice-ObjectModel-Services-I:IServerExtensionProxyService_IN.adoc[]
