--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -7,10 +7,9 @@
 .API для работы с МЧД
 [%collapsible]
 ====
-** Добавлен пример работы с xref:cards:attorney.adoc[системной карточкой доверенности].
+. Добавлен пример работы с xref:cards:attorney.adoc[системной карточкой доверенности].
 +
-[lowerroman]
-.. Классы:
+. Добавлены новые классы:
 +
 ** `xref:BackOffice-ObjectModel-BaseCard:BaseCardExternalPowerOfAttorney_CL.adoc[BaseCardExternalPowerOfAttorney]` -- Базовая карточка сторонней доверенности для хранения информации о машиночитаемых доверенностях контрагентов, поступающих от операторов ЭДО.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` -- системная карточка доверенности.
@@ -74,12 +73,17 @@
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[PowerOfAttorneyMachineReadableInfo]` -- Содержит информацию о МЧД.
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerification_CL.adoc[PowerOfAttorneyVerification]` -- Содержит результат проверки действительности доверенности
 +
-.. Перечисления::
+. Добавлены новые перечисления::
 +
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[PowerOfAttorneyRegTransferStatuses]` -- статус передачи доверенности в распределённый реестр ФНС.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRetrustType_EN.adoc[PowerOfAttorneyRetrustType]` -- признак возможности оформления передоверия.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySignatureFormat_EN.adoc[PowerOfAttorneySignatureFormat]` -- формат подписи.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[PowerOfAttorneyStatus]` -- статус доверенности.
++
+. Добавлен новый интерфейс:
++
+** `xref:BackOffice-ObjectModel-Services-I:ICompressService_IN.adoc[ICompressService]` -- сервис для работы с архивами.
+*** Интерфейс предоставляет метод `xref:BackOffice-ObjectModel-Services-I:CompressFolder_MT.adoc[]`, сжимающий содержимое папки.
 ====
 
 Добавлен метод::
